fix: make sure breakpoints are aligned with bulma mobile

--- a/src/fellchensammlung/static/fellchensammlung/css/bulma-styles.css
+++ b/src/fellchensammlung/static/fellchensammlung/css/bulma-styles.css
@@ -55,13 +55,13 @@
     width: 90%;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 768px) {
     .maplibregl-popup {
         max-width: 280px !important;
     }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 768px) {
     .maplibregl-popup {
         max-width: 150px !important;
     }
